--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="logo-container">
 					<img src="./assets/images/rex-main-logo.png" alt="REX Main Logo" class="main-logo">
 				</div>
-                <p class="event-description">the ultimate robotics experience!</p>
+                <p class="event-description">The Ultimate Robotics Experience!</p>
 				<br>
                 <p class="dates">
 					<b>18 | 19 | 20 
