--- a/events.html
+++ b/events.html
@@ -46,7 +46,7 @@
                 <h2 class="event-title">EVENTS DROPPING SOON!</h2>
 
 				
-                <button class="get-tickets">Tickets Dropping Soon
+                <a href="https://www.yepdesk.com/rex-5"><button class="get-tickets">Tickets Dropping Soon
 					<div class="star-1">
 					  <svg xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 784.11 815.53"
 						style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
@@ -126,6 +126,7 @@
 					  </svg>
 					</div>
 				  </button>
+				  </a>
             </div>
         </section>
 
