index map link update

--- a/index.html
+++ b/index.html
@@ -241,10 +241,11 @@
 				</div>
 			</div>
 			
-            <div class="location">
+            <a href="https://maps.app.goo.gl/CbPN6QrNNufDfDoq6"><div class="location">
 				<img src="./assets/images/location.svg" alt="Location Icon" class="location-icon">
                 <span>RIT Kottayam</span>
             </div>
+			</a>
         </footer>
 
     </div>
