location css corr

--- a/index.html
+++ b/index.html
@@ -241,11 +241,11 @@
 				</div>
 			</div>
 			
-            <a href="https://maps.app.goo.gl/CbPN6QrNNufDfDoq6"><div class="location">
+            <div class="location">
 				<img src="./assets/images/location.svg" alt="Location Icon" class="location-icon">
-                <span>RIT Kottayam</span>
+                <a href="https://maps.app.goo.gl/CbPN6QrNNufDfDoq6"></a><span>RIT Kottayam</span></a>
             </div>
-			</a>
+			
         </footer>
 
     </div>
