location css corr 2

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 			
             <div class="location">
 				<img src="./assets/images/location.svg" alt="Location Icon" class="location-icon">
-                <a href="https://maps.app.goo.gl/CbPN6QrNNufDfDoq6"></a><span>RIT Kottayam</span></a>
+                <a href="https://maps.app.goo.gl/CbPN6QrNNufDfDoq6"><span>RIT Kottayam</span></a>
             </div>
 			
         </footer>
