--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="google-site-verification" content="3cmxmZH2HvSR49J6lHZyl2mLDX2esGXZKi9ttlYBF-s" />
+	<meta name="description" content="Robotics Experience Program (REX) is the award-winning flagship event of IEEE RAS SBC RIT; a haven for robotics enthusiasts. Dive into a month-long plethora of events related to robotics and automation and meet those who rule the game in this field. Experience unlimited adventures through activities, this is an opportunity you wouldn't want to pass on!">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
     <link rel="shortcut icon" type="x icon" href="./assets/images/corner.svg">
-	<title>REX 5.0</title>
+	<title>REX 5.0 - IEEE SB RIT</title>
     <link rel="stylesheet" href="./assets/css/rex-landing.css?v=1.1">
 	<link rel="stylesheet" href="./assets/css/get-tickets.css?v=1.1">
 </head>
