--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 					</div>
 				  </button>
 					</a>
-				  <a href="https://bit.ly/CALLFORAMBASSADOR"><button class="ca-button">Become a Campus Ambassador
+				  <a href="https://bit.ly/CALLFORAMBASSADOR" target="_blank"><button class="ca-button">Become a Campus Ambassador
 					<div class="star-1">
 					  <svg xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 784.11 815.53"
 						style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
