--- a/events.html
+++ b/events.html
@@ -33,8 +33,7 @@
                     <a href="index.html" class="link-menu"><span class="span-menu">HOME</span></a>
 					<a href="about.html" class="link-menu"><span class="span-menu">ABOUT</span></a>
 					<a href="gallery.html" class="link-menu"><span class="span-menu">GALLERY</span></a>
-					
-					<a href="https://www.yepdesk.com/rex-5" class="link-menu"><span class="span-menu">REGISTER</span></a>
+					<a href="https://www.yepdesk.com/rex-5" class="link-menu" target="_blank"><span class="span-menu">REGISTER</span></a>
 					
 				</nav>
 				<div class="close-button" id="closeButton"></div>
