--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					<a href="about.html" class="link-menu"><span class="span-menu">ABOUT</span></a>
 					<a href="gallery.html" class="link-menu"><span class="span-menu">GALLERY</span></a>
 					<a href="events.html" class="link-menu"><span class="span-menu">EVENTS</span></a>
-					<a href="https://www.yepdesk.com/rex-5" class="link-menu"><span class="span-menu">REGISTER</span></a>
+					<a href="https://www.yepdesk.com/rex-5" class="link-menu" target="_blank"><span class="span-menu">REGISTER</span></a>
 				</nav>
 				<div class="close-button" id="closeButton"></div>
 			</div>
