--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 					OCT 2024</b>
 				</p>
 				
-                <a href="https://www.yepdesk.com/rex-5"><button class="get-tickets">Get Tickets
+                <a href="https://www.yepdesk.com/rex-5" target="_blank"><button class="get-tickets">Get Tickets
 					<div class="star-1">
 					  <svg xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 784.11 815.53"
 						style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
