event page and minor updates

--- a/events.html
+++ b/events.html
@@ -7,6 +7,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.0/font/bootstrap-icons.min.css" rel="stylesheet">
 	<link rel="shortcut icon" type="x icon" href="./assets/images/corner.svg">
     <title>REX 5.0</title>
     <link rel="stylesheet" href="./assets/css/events.css?v=1.0">
@@ -126,8 +127,74 @@
 					</div>
 				  </button>
 				  </a>
-            </div>
+			</div>
         </section>
+
+		<div class="event-container">
+			<div class="bento-grid">
+				<div class="box box1">
+					<img src="./assets/images/earlybird.jfif" alt="Image" class="image-fill">
+				</div>
+				<div class="box box2">
+					<h2>Workshop 1: Computer Vision</h2>
+					<p>"The best way to predict the future is to create it." 
+						<br> 
+						~Abraham Lincoln  
+						<br><br>
+						Step into the world of cutting-edge technology with our REX 5.0 workshop! 💫
+						<br>
+						Topic:&emsp;&ensp;<b>Computer Vision</b> 
+						<br>
+						Speakers:
+						<br>
+						&emsp;&emsp;&emsp;&emsp;<b>Richu Bini</b>, Embedded Software Design Engineer
+							<br>
+						&emsp;&emsp;&emsp;&emsp;<b>Rishad</b>, Embedded Engineer
+						<br>
+						Venue:&emsp;<b>RIT Kottayam</b>
+						<br>
+						Date:&emsp;&ensp;<b>18, 19, 20 October 2024</b>
+						<br><br>
+						✨ Don’t miss this interactive, hands-on session where your ideas meet innovation!
+					</p>
+				</div>
+				<div class="box box3">
+					<a class="ticket-a" href="https://www.yepdesk.com/rex-5" target="_blank">Get Tickets</a>
+				</div>
+			</div>
+
+			<div class="bento-grid">
+				<div class="box box1">
+					<img src="./assets/images/earlybird.jfif" alt="Image" class="image-fill">
+				</div>
+				<div class="box box2">
+					<h2>Workshop 1: Computer Vision</h2>
+					<p>"The best way to predict the future is to create it." 
+						<br> 
+						~Abraham Lincoln  
+						<br><br>
+						Step into the world of cutting-edge technology with our REX 5.0 workshop! 💫
+						<br>
+						Topic:&emsp;&ensp;<b>Computer Vision</b> 
+						<br>
+						Speakers:
+						<br>
+						&emsp;&emsp;&emsp;&emsp;<b>Richu Bini</b>, Embedded Software Design Engineer
+							<br>
+						&emsp;&emsp;&emsp;&emsp;<b>Rishad</b>, Embedded Engineer
+						<br>
+						Venue:&emsp;<b>RIT Kottayam</b>
+						<br>
+						Date:&emsp;&ensp;<b>18, 19, 20 October 2024</b>
+						<br><br>
+						✨ Don’t miss this interactive, hands-on session where your ideas meet innovation!
+					</p>
+				</div>
+				<div class="box box3">
+					<a class="ticket-a" href="https://www.yepdesk.com/rex-5" target="_blank">Get Tickets</a>
+				</div>
+			</div>
+		</div>
 
 
         <footer class="footer">
