--- a/events.html
+++ b/events.html
@@ -43,7 +43,7 @@
 
         <section class="hero-section">
             <div class="hero-content">
-                <h2 class="event-title">EVENTS DROPPING SOON!</h2>
+                <h2 class="event-title">EVENTS</h2>
 
 				
                 <a href="https://www.yepdesk.com/rex-5" target="_blank"><button class="get-tickets">Get Tickets
