--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
             </section>
         </div>
 
-        <div></div>
+        <div>
             <p style="padding: 30px;">
                 
             </p>
@@ -77,7 +77,7 @@
             </section>
         </div>
 
-        <div></div>
+        <div>
             <p style="padding: 30px;">
                 
             </p>
