--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <link rel="shortcut icon" type="x icon" href="./assets/images/corner.svg">
 	<title>REX 5.0 - IEEE SB RIT</title>
     <link rel="stylesheet" href="./assets/css/rex-landing.css?v=1.1">
-	<link rel="stylesheet" href="./assets/css/get-tickets.css?v=1.2">
+	<link rel="stylesheet" href="./assets/css/get-tickets.css?v=1.1">
 </head>
-
+ 
 <body>
 	
     <di class="container">
@@ -36,7 +36,7 @@
 					<a href="about.html" class="link-menu"><span class="span-menu">ABOUT</span></a>
 					<a href="gallery.html" class="link-menu"><span class="span-menu">GALLERY</span></a>
 					<a href="events.html" class="link-menu"><span class="span-menu">EVENTS</span></a>
-					<a href="https://www.yepdesk.com/rex-5" class="link-menu" target="_blank"><span class="span-menu">REGISTER</span></a>
+					<a href="https://www.yepdesk.com/rex-5" class="link-menu"><span class="span-menu">REGISTER</span></a>
 				</nav>
 				<div class="close-button" id="closeButton"></div>
 			</div>
@@ -56,7 +56,7 @@
 					OCT 2024</b>
 				</p>
 				
-                <a href="https://www.yepdesk.com/rex-5" target="_blank"><button class="get-tickets">Get Tickets
+                <a href="https://www.yepdesk.com/rex-5"><button class="get-tickets">Tickets Dropping Soon
 					<div class="star-1">
 					  <svg xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 784.11 815.53"
 						style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
@@ -137,7 +137,7 @@
 					</div>
 				  </button>
 					</a>
-				  <a href="https://bit.ly/CALLFORAMBASSADOR" target="_blank"><button class="ca-button">Become a Campus Ambassador
+				  <a href="https://bit.ly/CALLFORAMBASSADOR"><button class="ca-button">Become a Campus Ambassador
 					<div class="star-1">
 					  <svg xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 784.11 815.53"
 						style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
@@ -218,89 +218,6 @@
 					</div>
 				  </button>
 				  </a>
-				  <p>
-				  <a href="./events.html" target="_blank"><button class="ev-button">Checkout our Events
-					<div class="star-1">
-					  <svg xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 784.11 815.53"
-						style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
-						version="1.1" xml:space="preserve" xmlns="http://www.w3.org/2000/svg">
-						<defs></defs>
-						<g id="Layer_x0020_1">
-						  <metadata id="CorelCorpID_0Corel-Layer"></metadata>
-						  <path
-							d="M392.05 0c-20.9,210.08 -184.06,378.41 -392.05,407.78 207.96,29.37 371.12,197.68 392.05,407.74 20.93,-210.06 184.09,-378.37 392.05,-407.74 -207.98,-29.38 -371.16,-197.69 -392.06,-407.78z"
-							class="fil0"></path>
-						</g>
-					  </svg>
-					</div>
-					<div class="star-2">
-					  <svg xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 784.11 815.53"
-						style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
-						version="1.1" xml:space="preserve" xmlns="http://www.w3.org/2000/svg">
-						<defs></defs>
-						<g id="Layer_x0020_1">
-						  <metadata id="CorelCorpID_0Corel-Layer"></metadata>
-						  <path
-							d="M392.05 0c-20.9,210.08 -184.06,378.41 -392.05,407.78 207.96,29.37 371.12,197.68 392.05,407.74 20.93,-210.06 184.09,-378.37 392.05,-407.74 -207.98,-29.38 -371.16,-197.69 -392.06,-407.78z"
-							class="fil0"></path>
-						</g>
-					  </svg>
-					</div>
-					<div class="star-3">
-					  <svg xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 784.11 815.53"
-						style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
-						version="1.1" xml:space="preserve" xmlns="http://www.w3.org/2000/svg">
-						<defs></defs>
-						<g id="Layer_x0020_1">
-						  <metadata id="CorelCorpID_0Corel-Layer"></metadata>
-						  <path
-							d="M392.05 0c-20.9,210.08 -184.06,378.41 -392.05,407.78 207.96,29.37 371.12,197.68 392.05,407.74 20.93,-210.06 184.09,-378.37 392.05,-407.74 -207.98,-29.38 -371.16,-197.69 -392.06,-407.78z"
-							class="fil0"></path>
-						</g>
-					  </svg>
-					</div>
-					<div class="star-4">
-					  <svg xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 784.11 815.53"
-						style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
-						version="1.1" xml:space="preserve" xmlns="http://www.w3.org/2000/svg">
-						<defs></defs>
-						<g id="Layer_x0020_1">
-						  <metadata id="CorelCorpID_0Corel-Layer"></metadata>
-						  <path
-							d="M392.05 0c-20.9,210.08 -184.06,378.41 -392.05,407.78 207.96,29.37 371.12,197.68 392.05,407.74 20.93,-210.06 184.09,-378.37 392.05,-407.74 -207.98,-29.38 -371.16,-197.69 -392.06,-407.78z"
-							class="fil0"></path>
-						</g>
-					  </svg>
-					</div>
-					<div class="star-5">
-					  <svg xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 784.11 815.53"
-						style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
-						version="1.1" xml:space="preserve" xmlns="http://www.w3.org/2000/svg">
-						<defs></defs>
-						<g id="Layer_x0020_1">
-						  <metadata id="CorelCorpID_0Corel-Layer"></metadata>
-						  <path
-							d="M392.05 0c-20.9,210.08 -184.06,378.41 -392.05,407.78 207.96,29.37 371.12,197.68 392.05,407.74 20.93,-210.06 184.09,-378.37 392.05,-407.74 -207.98,-29.38 -371.16,-197.69 -392.06,-407.78z"
-							class="fil0"></path>
-						</g>
-					  </svg>
-					</div>
-					<div class="star-6">
-					  <svg xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 784.11 815.53"
-						style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
-						version="1.1" xml:space="preserve" xmlns="http://www.w3.org/2000/svg">
-						<defs></defs>
-						<g id="Layer_x0020_1">
-						  <metadata id="CorelCorpID_0Corel-Layer"></metadata>
-						  <path
-							d="M392.05 0c-20.9,210.08 -184.06,378.41 -392.05,407.78 207.96,29.37 371.12,197.68 392.05,407.74 20.93,-210.06 184.09,-378.37 392.05,-407.74 -207.98,-29.38 -371.16,-197.69 -392.06,-407.78z"
-							class="fil0"></path>
-						</g>
-					  </svg>
-					</div>
-				  </button>
-					</a>
-				</p>
             </div>
         </section>
 		
@@ -335,6 +252,6 @@
 
     </div>
 	<!-- <audio id="backgroundMusic" src="./assets/audio/life is beautiful.mp3"></audio> -->
-	<script src="./assets/js/global.js?v=1.1"></script>
+	<script src="./assets/js/global.js?v=1.0"></script>
 </body>
 </html>
