--- a/events.html
+++ b/events.html
@@ -189,11 +189,12 @@
           </div>
           <div class="box box3">
             <a
-              class="ticket-a"
-              href="https://www.yepdesk.com/rex-5"
-              target="_blank"
-              >Get Tickets</a
-            >
+            class="ticket-a"
+            href="https://www.yepdesk.com/rex-5"
+            target="_blank"
+            >Get Tickets
+            </a>
+            <!-- <img id="arrow-icon" src="./assets/images/arrow.png" alt="arrow icon"> -->
           </div>
         </div>
 
