Revert "Merge branch 'main' of https://github.com/ellen-rose-james/rex5"
This reverts commit 4e3769f45b737872e3481dae63f38cf3b350a646, reversing
changes made to a6f69a397c3e7fbb39c6d46e07ee97d5a62801ed.

--- a/events.html
+++ b/events.html
@@ -189,12 +189,11 @@
           </div>
           <div class="box box3">
             <a
-            class="ticket-a"
-            href="https://www.yepdesk.com/rex-5"
-            target="_blank"
-            >Get Tickets
-            </a>
-            <!-- <img id="arrow-icon" src="./assets/images/arrow.png" alt="arrow icon"> -->
+              class="ticket-a"
+              href="https://www.yepdesk.com/rex-5"
+              target="_blank"
+              >Get Tickets</a
+            >
           </div>
         </div>
 
