workshop2 content corr

--- a/events.html
+++ b/events.html
@@ -208,10 +208,10 @@
 						~ Daniel H. Wilson
 						<br><br>
 						Are you eager to explore the incredible world of robotics? 💫
-						<br>
+						<br><br>
             Seize the opportunity to join an immersive hands-on workshop organized by <b>IEEE RAS SBC RIT</b> as part of <b>REX 5.0</b>! Grab your chance to widen your realm of knowledge and skills from top-notch experts from <b>I-Hub Robotics</b>.
             <br>
-						Topic:&emsp;&ensp;<b>Rbotic Arm Building</b> 
+						Topic:&emsp;&ensp;<b>Robotic Arm Building</b> 
 						<br>
 						Venue:&emsp;<b>RIT Kottayam</b>
 						<br>
