--- a/events.html
+++ b/events.html
@@ -198,32 +198,44 @@
         </div>
 
         <div class="bento-grid">
-				<div class="box box1">
-					<img src="./assets/images/workshop2-roboticarm.jpeg" alt="Image" class="image-fill">
-				</div>
-				<div class="box box2">
-					<h2>Workshop 2: Robotic Arm Building</h2>
-					<p>“A lot of robotics is just too fantastic for people to believe.” 
-						<br> 
-						~ Daniel H. Wilson
-						<br><br>
-						Are you eager to explore the incredible world of robotics? 💫
-						<br><br>
-            Seize the opportunity to join an immersive hands-on workshop organized by <b>IEEE RAS SBC RIT</b> as part of <b>REX 5.0</b>! Grab your chance to widen your realm of knowledge and skills from top-notch experts from <b>I-Hub Robotics</b>.
-            <br>
-						Topic:&emsp;&ensp;<b>Robotic Arm Building</b> 
-						<br>
-						Venue:&emsp;<b>RIT Kottayam</b>
-						<br>
-						Date:&emsp;&ensp;<b>18, 19, 20 October 2024</b>
-						<br><br>
-						✨ Don’t miss out! Gear up for an unforgettable experience!
-					</p>
-				</div>
-				<div class="box box3">
-					<a class="ticket-a" href="https://www.yepdesk.com/rex-5" target="_blank">Get Tickets</a>
-				</div>
-			</div>
+          <div class="box box1">
+            <img
+              src="./assets/images/workshop2-roboticarm.jpeg"
+              alt="Image"
+              class="image-fill"
+            />
+          </div>
+          <div class="box box2">
+            <h2>Workshop 2: Robotic Arm Building</h2>
+            <p>
+              “A lot of robotics is just too fantastic for people to believe.”
+              <br />
+              ~ Daniel H. Wilson
+              <br /><br />
+              Are you eager to explore the incredible world of robotics? 💫
+              <br /><br />
+              Seize the opportunity to join an immersive hands-on workshop
+              organized by <b>IEEE RAS SBC RIT</b> as part of <b>REX 5.0</b>!
+              Grab your chance to widen your realm of knowledge and skills from
+              top-notch experts from <b>I-Hub Robotics</b>.
+              <br />
+              Topic:&emsp;&ensp;<b>Robotic Arm Building</b>
+              <br />
+              Venue:&emsp;<b>RIT Kottayam</b>
+              <br />
+              Date:&emsp;&ensp;<b>18, 19, 20 October 2024</b> <br /><br />
+              ✨ Don’t miss out! Gear up for an unforgettable experience!
+            </p>
+          </div>
+          <div class="box box3">
+            <a
+              class="ticket-a"
+              href="https://www.yepdesk.com/rex-5"
+              target="_blank"
+              >Get Tickets</a
+            >
+          </div>
+        </div>
       </div>
 
       <footer class="footer">
