--- a/events.html
+++ b/events.html
@@ -232,7 +232,7 @@
               class="ticket-a"
               href="https://www.yepdesk.com/rex-5"
               target="_blank"
-              >Get Ticket</a
+              >Get Tickets</a
             >
           </div>
         </div>
