--- a/events.html
+++ b/events.html
@@ -164,13 +164,6 @@
           <div class="box box2">
             <h2>Workshop 1: Computer Vision</h2>
             <p>
-              "The best way to predict the future is to create it."
-              <br />
-              ~Abraham Lincoln
-              <br /><br />
-              Step into the world of cutting-edge technology with our REX 5.0
-              workshop! 💫
-              <br />
               Topic:&emsp;&ensp;<b>Computer Vision</b>
               <br />
               Speakers:
@@ -182,9 +175,7 @@
               <br />
               Venue:&emsp;<b>RIT Kottayam</b>
               <br />
-              Date:&emsp;&ensp;<b>18, 19, 20 October 2024</b> <br /><br />
-              ✨ Don’t miss this interactive, hands-on session where your ideas
-              meet innovation!
+              Date:&emsp;&ensp;<b>18, 19, 20 October 2024</b>
             </p>
           </div>
           <div class="box box3">
@@ -208,23 +199,11 @@
           <div class="box box2">
             <h2>Workshop 2: Robotic Arm Building</h2>
             <p>
-              “A lot of robotics is just too fantastic for people to believe.”
-              <br />
-              ~ Daniel H. Wilson
-              <br /><br />
-              Are you eager to explore the incredible world of robotics? 💫
-              <br /><br />
-              Seize the opportunity to join an immersive hands-on workshop
-              organized by <b>IEEE RAS SBC RIT</b> as part of <b>REX 5.0</b>!
-              Grab your chance to widen your realm of knowledge and skills from
-              top-notch experts from <b>I-Hub Robotics</b>.
-              <br />
               Topic:&emsp;&ensp;<b>Robotic Arm Building</b>
               <br />
               Venue:&emsp;<b>RIT Kottayam</b>
               <br />
-              Date:&emsp;&ensp;<b>18, 19, 20 October 2024</b> <br /><br />
-              ✨ Don’t miss out! Gear up for an unforgettable experience!
+              Date:&emsp;&ensp;<b>18, 19, 20 October 2024</b>
             </p>
           </div>
           <div class="box box3">
