--- a/events.html
+++ b/events.html
@@ -154,6 +154,48 @@
             >
           </div>
         </div>
+
+        <div class="bento-grid">
+          <div class="box box1">
+            <img
+              src="./assets/images/workshop3-ros.jpeg"
+              alt="Image"
+              class="image-fill"
+            />
+          </div>
+          <div class="box box2">
+            <h2>Workshop 3: Robotic Arm Building</h2>
+            <p>
+              "Technology is best when it brings people together."
+              <br>
+              ~Matt Mullenweg
+              <br>
+              <br>
+              Get ready to embark on an incredible journey at our <b>REX 5.0</b> workshop, organized by <b>IEEE RAS SBC RIT</b>.
+              <br>
+              <br>
+              Topic : <b>Building a Differential Drive Robot using ROS</b>
+              <br>
+              Speaker: <b>Bineesh B S</b>
+              <br>
+              Robotic Instructor,
+              <br>
+              Sinro Robotics
+              <br>
+              Date: <b>18,19,20 October 2024*</b>
+              <br><br>
+              Join us for this hands-on, immersive experience where innovation meets creativity.✨
+            </p>
+          </div>
+          <div class="box box3">
+            <a
+              class="ticket-a"
+              href="https://www.yepdesk.com/rex-5"
+              target="_blank"
+              >Get Tickets</a
+            >
+          </div>
+        </div>
       </div>
 
       <footer class="footer">
