--- a/events.html
+++ b/events.html
@@ -174,15 +174,15 @@
               Get ready to embark on an incredible journey at our <b>REX 5.0</b> workshop, organized by <b>IEEE RAS SBC RIT</b>.
               <br>
               <br>
-              Topic : <b>Building a Differential Drive Robot using ROS</b>
+              Topic:&emsp;&ensp;<b>Building a Differential Drive Robot using ROS</b>
               <br>
               Speaker: <b>Bineesh B S</b>
               <br>
-              Robotic Instructor,
+              &emsp;&emsp;&emsp;&emsp;Robotic Instructor,
               <br>
-              Sinro Robotics
+              &emsp;&emsp;&emsp;&emsp;Sinro Robotics
               <br>
-              Date: <b>18,19,20 October 2024*</b>
+              Date:&emsp;&ensp;<b>18,19,20 October 2024</b>
               <br><br>
               Join us for this hands-on, immersive experience where innovation meets creativity.✨
             </p>
