--- a/events.html
+++ b/events.html
@@ -174,17 +174,65 @@
               Get ready to embark on an incredible journey at our <b>REX 5.0</b> workshop, organized by <b>IEEE RAS SBC RIT</b>.
               <br>
               <br>
-              Topic : <b>Building a Differential Drive Robot using ROS</b>
+              Topic:&emsp;&ensp;<b>Building a Differential Drive Robot using ROS</b>
               <br>
               Speaker: <b>Bineesh B S</b>
               <br>
-              Robotic Instructor,
+              &emsp;&emsp;&emsp;&emsp;Robotic Instructor,
               <br>
-              Sinro Robotics
+              &emsp;&emsp;&emsp;&emsp;Sinro Robotics
               <br>
-              Date: <b>18,19,20 October 2024*</b>
+              Venue:&emsp;<b>RIT Kottayam</b>
+              <br>
+              Date:&emsp;&ensp;<b>18,19,20 October 2024</b>
               <br><br>
               Join us for this hands-on, immersive experience where innovation meets creativity.✨
+            </p>
+          </div>
+          <div class="box box3">
+            <a
+              class="ticket-a"
+              href="https://www.yepdesk.com/rex-5"
+              target="_blank"
+              >Get Tickets</a
+            >
+          </div>
+        </div>
+
+        <div class="bento-grid">
+          <div class="box box1">
+            <img
+              src="./assets/images/talk1-assistivetech.jpeg"
+              alt="Image"
+              class="image-fill"
+            />
+          </div>
+          <div class="box box2">
+            <h2>Talk Session 1: Robotics in Assistive Technology</h2>
+            <p>
+              "Innovation distinguishes between a leader and a follower." 
+              <br>
+              ~Steve Jobs 
+              <br>
+              <br>
+              Join us for an engaging talk session at <b>REX 5.0</b>, organized by <b>IEEE RAS SBC RIT</b>.
+              <br>
+              <br>
+              Topic:&emsp;&ensp;<b>Robotics in Assistive Technology</b>
+              <br>
+              Speaker: <b>Vishnu P Kumar</b>
+              <br>
+              &emsp;&emsp;&emsp;&emsp;Co Founder and CTO,
+              <br>
+              &emsp;&emsp;&emsp;&emsp;Unibotix Innovations
+              <br>
+              Venue:&emsp;<b>RIT Kottayam</b>
+              <br>
+              Date:&emsp;&ensp;<b>18,19,20 October 2024</b>
+              <br><br>
+              Explore how robotics is revolutionizing assistive technology and changing lives.
+              <br>
+              ✨ Be part of this inspiring conversation!
             </p>
           </div>
           <div class="box box3">
