--- a/events.html
+++ b/events.html
@@ -184,7 +184,7 @@
               <br>
               Venue:&emsp;<b>RIT Kottayam</b>
               <br>
-              Date:&emsp;&ensp;<b>18,19,20 October 2024</b>
+              Date:&emsp;&ensp;<b>18, 19, 20 October 2024</b>
               <br><br>
               Join us for this hands-on, immersive experience where innovation meets creativity.✨
             </p>
@@ -228,7 +228,7 @@
               <br>
               Venue:&emsp;<b>RIT Kottayam</b>
               <br>
-              Date:&emsp;&ensp;<b>18,19,20 October 2024</b>
+              Date:&emsp;&ensp;<b>18, 19, 20 October 2024</b>
               <br><br>
               Explore how robotics is revolutionizing assistive technology and changing lives.
               <br>
