--- a/events.html
+++ b/events.html
@@ -71,14 +71,59 @@
       </section>
 
       <div class="event-container">
+
+        <div class="bento-grid">
+          <div class="box box1">
+            <img
+              src="./assets/images/pre-event1-mathemathical-modelling.jpeg"
+              alt="Image"
+              class="image-fill"
+            />            
+          </div>          
+          <div class="box box2">
+            <h2>Pre Event 1: Mathemathical Modelling for Robotics </h2>
+            <p>
+              "The only impossible journey is the one you never begin. "
+              <br />
+              ~Tony Robbins
+              <br /><br />
+              Step into the world of cutting-edge technology with our REX 5.0
+              pre-event! 💫
+              <br />
+              Topic:&emsp;&ensp;<b>Mathemathical Modelling for Robotics</b>
+              <br />
+              Speakers:
+              <br />
+              &emsp;&emsp;&emsp;&emsp;<b>Abdul Rahim</b>,<br>&emsp;&emsp;&emsp;&emsp;Research and Development Enginner at Zeus Numerix
+              <br />
+<!--               
+              &emsp;&emsp;&emsp;&emsp;<b>Rishad</b>, Embedded Engineer
+              <br /> -->
+              Venue:&emsp;<b>RIT Kottayam</b>
+              <br />
+              Date:&emsp;&ensp;<b>12 October 2024</b> <br /><br />
+              ✨ Don't miss this opportunity to learn from an expert and deepen your knowledge!
+            </p>
+          </div>
+          <div class="box box3">
+            <a
+              class="ticket-a"
+              href="https://www.yepdesk.com/rex-5"
+              target="_blank"
+              >Get Tickets</a
+            >
+          </div>
+        </div>
+
+        
         <div class="bento-grid">
           <div class="box box1">
             <img
               src="./assets/images/workshop1-computervision.jpeg"
               alt="Image"
               class="image-fill"
-            />
-          </div>
+            />            
+          </div>          
           <div class="box box2">
             <h2>Workshop 1: Computer Vision</h2>
             <p>
@@ -114,6 +159,7 @@
             >
           </div>
         </div>
+
 
         <div class="bento-grid">
           <div class="box box1">
@@ -154,6 +200,7 @@
             >
           </div>
         </div>
+
 
         <div class="bento-grid">
           <div class="box box1">
@@ -198,15 +245,16 @@
             >
           </div>
         </div>
-
         <div class="bento-grid">
           <div class="box box1">
             <img
-              src="./assets/images/talk1-assistivetech.jpeg"
+              src="./assets/images/talk1-assistivetech-new.jpeg"
               alt="Image"
               class="image-fill"
             />
           </div>
+
+
           <div class="box box2">
             <h2>Talk Session 1: Robotics in Assistive Technology</h2>
             <p>
@@ -244,6 +292,7 @@
             >
           </div>
         </div>
+
       </div>
 
       <footer class="footer">
