footer web team update

--- a/events.html
+++ b/events.html
@@ -346,9 +346,9 @@
             <br>
             REX Web Team:
             <br>
-            <a href="http://www.linkedin.com/in/ellenrosejames" style="text-decoration: none;">Ellen Rose James</a>
+            <a href="https://github.com/ellen-rose-james" target="_blank" style="text-decoration: none;">Ellen Rose James</a>
             <br>
-            <a href="https://github.com/dhjr" style="text-decoration: none;">Dhananjay R</a>
+            <a href="https://github.com/dhjr" target="_blank" style="text-decoration: none;">Dhananjay R</a>
           </p>
         </div>
 
