--- a/about.html
+++ b/about.html
@@ -144,12 +144,12 @@
                   <br>
                   <a href="http://www.linkedin.com/in/ellenrosejames" style="text-decoration: none;">Ellen Rose James</a>
                   <br>
-                  <a href="https://github.com/dhjr" style="text-decoration: none;">Dhananjay R</a>
+                  <a href="https://www.linkedin.com/in/dhananjayr/" style="text-decoration: none;">Dhananjay R</a>
                 </p>
               </div>
       
               <div class="footer-map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3934.19079391124!2d76.62031297484009!3d9.578815990506149!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b062d96b2fe8ed9%3A0xbade243e087b408!2sRAJIV%20GANDHI%20INSTITUTE%20OF%20TECHNOLOGY%2C%20KOTTAYAM!5e0!3m2!1sen!2sin!4v1728241993898!5m2!1sen!2sin" width="250" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3934.19079391124!2d76.62031297484009!3d9.578815990506149!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b062d96b2fe8ed9%3A0xbade243e087b408!2sRAJIV%20GANDHI%20INSTITUTE%20OF%20TECHNOLOGY%2C%20KOTTAYAM!5e0!3m2!1sen!2sin!4v1728241993898!5m2!1sen!2sin" width="250" height="250" style="border:0; border-radius: 20px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div>
         </footer>
 
