--- a/events.html
+++ b/events.html
@@ -82,6 +82,7 @@
           </div>          
           <div class="box box2">
             <h2>Pre Event 1: Mathemathical Modelling for Robotics </h2>
+            <br><br>
             <p>
               "The only impossible journey is the one you never begin. "
               <br />
@@ -92,9 +93,8 @@
               <br />
               Topic:&emsp;&ensp;<b>Mathemathical Modelling for Robotics</b>
               <br />
-              Speakers:
-              <br />
-              &emsp;&emsp;&emsp;&emsp;<b>Abdul Rahim</b>,<br>&emsp;&emsp;&emsp;&emsp;Research and Development Enginner at Zeus Numerix
+              Speaker:
+              <b>Abdul Rahim</b>,<br>&emsp;&emsp;&emsp;&emsp;Research and Development Engineer,<br>&emsp;&emsp;&emsp;&emsp;Zeus Numerix
               <br />
 <!--               
               &emsp;&emsp;&emsp;&emsp;<b>Rishad</b>, Embedded Engineer
@@ -126,6 +126,7 @@
           </div>          
           <div class="box box2">
             <h2>Workshop 1: Computer Vision</h2>
+            <br><br>
             <p>
               "The best way to predict the future is to create it."
               <br />
@@ -171,6 +172,7 @@
           </div>
           <div class="box box2">
             <h2>Workshop 2: Robotic Arm Building</h2>
+            <br><br>
             <p>
               “A lot of robotics is just too fantastic for people to believe.”
               <br />
@@ -211,7 +213,8 @@
             />
           </div>
           <div class="box box2">
-            <h2>Workshop 3: Robotic Arm Building</h2>
+            <h2>Workshop 3: Differential Drive Robot using ROS</h2>
+            <br><br>
             <p>
               "Technology is best when it brings people together."
               <br>
@@ -257,6 +260,7 @@
 
           <div class="box box2">
             <h2>Talk Session 1: Robotics in Assistive Technology</h2>
+            <br><br>
             <p>
               "Innovation distinguishes between a leader and a follower." 
               <br>
@@ -348,12 +352,12 @@
             <br>
             <a href="https://github.com/ellen-rose-james" target="_blank" style="text-decoration: none;">Ellen Rose James</a>
             <br>
-            <a href="https://github.com/dhjr" target="_blank" style="text-decoration: none;">Dhananjay R</a>
+            <a href="https://www.linkedin.com/in/dhananjayr/" target="_blank" style="text-decoration: none;">Dhananjay R</a>
           </p>
         </div>
 
         <div class="footer-map">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3934.19079391124!2d76.62031297484009!3d9.578815990506149!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b062d96b2fe8ed9%3A0xbade243e087b408!2sRAJIV%20GANDHI%20INSTITUTE%20OF%20TECHNOLOGY%2C%20KOTTAYAM!5e0!3m2!1sen!2sin!4v1728241993898!5m2!1sen!2sin" width="250" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3934.19079391124!2d76.62031297484009!3d9.578815990506149!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b062d96b2fe8ed9%3A0xbade243e087b408!2sRAJIV%20GANDHI%20INSTITUTE%20OF%20TECHNOLOGY%2C%20KOTTAYAM!5e0!3m2!1sen!2sin!4v1728241993898!5m2!1sen!2sin" width="250" height="250" style="border:0; border-radius: 20px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </footer>
     </div>
