--- a/events.html
+++ b/events.html
@@ -94,15 +94,63 @@
               Topic:&emsp;&ensp;<b>Mathemathical Modelling for Robotics</b>
               <br />
               Speaker:
-              <b>Abdul Rahim</b>,<br>&emsp;&emsp;&emsp;&emsp;Research and Development Engineer,<br>&emsp;&emsp;&emsp;&emsp;Zeus Numerix
+              <b>Abdul Rahim</b>,
+              <br>
+              &emsp;&emsp;&emsp;&emsp;Research and Development Engineer, Zeus Numerix
+              <br>
+              &emsp;&emsp;&emsp;&emsp;Chairperson, IEEE RAS SBC RIT 2022-2023
               <br />
-<!--               
-              &emsp;&emsp;&emsp;&emsp;<b>Rishad</b>, Embedded Engineer
-              <br /> -->
               Venue:&emsp;<b>RIT Kottayam</b>
               <br />
-              Date:&emsp;&ensp;<b>12 October 2024</b> <br /><br />
+              Date:&emsp;&ensp;<b>12 October 2024</b> 
+              <br>
+              Time:&emsp;&ensp;<b>08:00 PM</b> 
+              <br /><br />
               ✨ Don't miss this opportunity to learn from an expert and deepen your knowledge!
+            </p>
+          </div>
+          <div class="box box3">
+            <a
+              class="ticket-a"
+              href="https://www.yepdesk.com/rex-5"
+              target="_blank"
+              >Get Tickets</a
+            >
+          </div>
+        </div>
+
+        <div class="bento-grid">
+          <div class="box box1">
+            <img
+              src="./assets/images/pre-event1-mathemathical-modelling.jpeg"
+              alt="Image"
+              class="image-fill"
+            />            
+          </div>          
+          <div class="box box2">
+            <h2>Pre Event 2: Edutainment - Creating Robotic Games using Godot </h2>
+            <br><br>
+            <p>
+              "The best way to predict the future is to create it."
+              <br />
+              ~ Abraham Lincoln
+              <br /><br />
+              Gear up for an exciting learning experience at <b>REX 5.0</b>, organized by <b>IEEE RAS SBC RIT</b> in collaboration with <b>IEEE SPS SBC RIT</b>. 💫
+              <br />
+              Topic:&emsp;&ensp;<b>Edutainment- Creating Robotic Games using Godot</b>
+              <br />
+              Speaker:
+              <b>Devasena Pasupuleti</b>,
+              <br>
+              &emsp;&emsp;&emsp;&emsp;PhD Scholar and Programming Instructor, Osaka University, Japan
+              <br />
+              Venue:&emsp;<b>RIT Kottayam</b>
+              <br />
+              Date:&emsp;&ensp;<b>14 October 2024</b>
+              <br>
+              Time:&emsp;&ensp;<b>07:00 PM</b> 
+              <br /><br />
+              Join us for this engaging and hands-on session where learning robotics through gaming meets innovation! ✨
             </p>
           </div>
           <div class="box box3">
@@ -350,7 +398,7 @@
             <br>
             REX Web Team:
             <br>
-            <a href="https://github.com/ellen-rose-james" target="_blank" style="text-decoration: none;">Ellen Rose James</a>
+            <a href="http://www.linkedin.com/in/ellenrosejames" target="_blank" style="text-decoration: none;">Ellen Rose James</a>
             <br>
             <a href="https://www.linkedin.com/in/dhananjayr/" target="_blank" style="text-decoration: none;">Dhananjay R</a>
           </p>
