--- a/events.html
+++ b/events.html
@@ -71,18 +71,17 @@
       </section>
 
       <div class="event-container">
-
         <div class="bento-grid">
           <div class="box box1">
             <img
               src="./assets/images/pre-event1-mathemathical-modelling.jpeg"
               alt="Image"
               class="image-fill"
-            />            
-          </div>          
+            />
+          </div>
           <div class="box box2">
-            <h2>Pre Event 1: Mathemathical Modelling for Robotics </h2>
-            <br><br>
+            <h2>Pre Event 1: Mathemathical Modelling for Robotics</h2>
+            <br /><br />
             <p>
               "The only impossible journey is the one you never begin. "
               <br />
@@ -95,18 +94,19 @@
               <br />
               Speaker:
               <b>Abdul Rahim</b>,
-              <br>
-              &emsp;&emsp;&emsp;&emsp;Research and Development Engineer, Zeus Numerix
-              <br>
+              <br />
+              &emsp;&emsp;&emsp;&emsp;Research and Development Engineer, Zeus
+              Numerix
+              <br />
               &emsp;&emsp;&emsp;&emsp;Chairperson, IEEE RAS SBC RIT 2022-2023
               <br />
               Venue:&emsp;<b>RIT Kottayam</b>
               <br />
-              Date:&emsp;&ensp;<b>12 October 2024</b> 
-              <br>
-              Time:&emsp;&ensp;<b>08:00 PM</b> 
-              <br /><br />
-              ✨ Don't miss this opportunity to learn from an expert and deepen your knowledge!
+              Date:&emsp;&ensp;<b>12 October 2024</b>
+              <br />
+              Time:&emsp;&ensp;<b>08:00 PM</b> <br /><br />
+              ✨ Don't miss this opportunity to learn from an expert and deepen
+              your knowledge!
             </p>
           </div>
           <div class="box box3">
@@ -122,35 +122,43 @@
         <div class="bento-grid">
           <div class="box box1">
             <img
-              src="./assets/images/pre-event1-mathemathical-modelling.jpeg"
+              src="./assets/images/pre-event2-edutainment.jpeg"
               alt="Image"
               class="image-fill"
-            />            
-          </div>          
+            />
+          </div>
           <div class="box box2">
-            <h2>Pre Event 2: Edutainment - Creating Robotic Games using Godot </h2>
-            <br><br>
+            <h2>
+              Pre Event 2: Edutainment - Creating Robotic Games using Godot
+            </h2>
+            <br /><br />
             <p>
               "The best way to predict the future is to create it."
               <br />
               ~ Abraham Lincoln
               <br /><br />
-              Gear up for an exciting learning experience at <b>REX 5.0</b>, organized by <b>IEEE RAS SBC RIT</b> in collaboration with <b>IEEE SPS SBC RIT</b>. 💫
+              Gear up for an exciting learning experience at <b>REX 5.0</b>,
+              organized by <b>IEEE RAS SBC RIT</b> in collaboration with
+              <b>IEEE SPS SBC RIT</b>. 💫
               <br />
-              Topic:&emsp;&ensp;<b>Edutainment- Creating Robotic Games using Godot</b>
+              Topic:&emsp;&ensp;<b
+                >Edutainment- Creating Robotic Games using Godot</b
+              >
               <br />
               Speaker:
               <b>Devasena Pasupuleti</b>,
-              <br>
-              &emsp;&emsp;&emsp;&emsp;PhD Scholar and Programming Instructor, Osaka University, Japan
+              <br />
+              &emsp;&emsp;&emsp;&emsp;PhD Scholar and Programming Instructor,
+              <br />
+              &emsp;&emsp;&emsp;&emsp;Osaka University, Japan
               <br />
               Venue:&emsp;<b>RIT Kottayam</b>
               <br />
               Date:&emsp;&ensp;<b>14 October 2024</b>
-              <br>
-              Time:&emsp;&ensp;<b>07:00 PM</b> 
-              <br /><br />
-              Join us for this engaging and hands-on session where learning robotics through gaming meets innovation! ✨
+              <br />
+              Time:&emsp;&ensp;<b>07:00 PM</b> <br /><br />
+              Join us for this engaging and hands-on session where learning
+              robotics through gaming meets innovation! ✨
             </p>
           </div>
           <div class="box box3">
@@ -163,18 +171,17 @@
           </div>
         </div>
 
-        
         <div class="bento-grid">
           <div class="box box1">
             <img
               src="./assets/images/workshop1-computervision.jpeg"
               alt="Image"
               class="image-fill"
-            />            
-          </div>          
+            />
+          </div>
           <div class="box box2">
             <h2>Workshop 1: Computer Vision</h2>
-            <br><br>
+            <br /><br />
             <p>
               "The best way to predict the future is to create it."
               <br />
@@ -209,7 +216,6 @@
           </div>
         </div>
 
-
         <div class="bento-grid">
           <div class="box box1">
             <img
@@ -220,7 +226,7 @@
           </div>
           <div class="box box2">
             <h2>Workshop 2: Robotic Arm Building</h2>
-            <br><br>
+            <br /><br />
             <p>
               “A lot of robotics is just too fantastic for people to believe.”
               <br />
@@ -251,7 +257,6 @@
           </div>
         </div>
 
-
         <div class="bento-grid">
           <div class="box box1">
             <img
@@ -262,29 +267,32 @@
           </div>
           <div class="box box2">
             <h2>Workshop 3: Differential Drive Robot using ROS</h2>
-            <br><br>
+            <br /><br />
             <p>
               "Technology is best when it brings people together."
-              <br>
+              <br />
               ~Matt Mullenweg
-              <br>
-              <br>
-              Get ready to embark on an incredible journey at our <b>REX 5.0</b> workshop, organized by <b>IEEE RAS SBC RIT</b>.
-              <br>
-              <br>
-              Topic:&emsp;&ensp;<b>Building a Differential Drive Robot using ROS</b>
-              <br>
+              <br />
+              <br />
+              Get ready to embark on an incredible journey at our
+              <b>REX 5.0</b> workshop, organized by <b>IEEE RAS SBC RIT</b>.
+              <br />
+              <br />
+              Topic:&emsp;&ensp;<b
+                >Building a Differential Drive Robot using ROS</b
+              >
+              <br />
               Speaker: <b>Bineesh B S</b>
-              <br>
+              <br />
               &emsp;&emsp;&emsp;&emsp;Robotic Instructor,
-              <br>
+              <br />
               &emsp;&emsp;&emsp;&emsp;Sinro Robotics
-              <br>
+              <br />
               Venue:&emsp;<b>RIT Kottayam</b>
-              <br>
-              Date:&emsp;&ensp;<b>18, 19, 20 October 2024</b>
-              <br><br>
-              Join us for this hands-on, immersive experience where innovation meets creativity.✨
+              <br />
+              Date:&emsp;&ensp;<b>18, 19, 20 October 2024</b> <br /><br />
+              Join us for this hands-on, immersive experience where innovation
+              meets creativity.✨
             </p>
           </div>
           <div class="box box3">
@@ -305,33 +313,33 @@
             />
           </div>
 
-
           <div class="box box2">
             <h2>Talk Session 1: Robotics in Assistive Technology</h2>
-            <br><br>
+            <br /><br />
             <p>
-              "Innovation distinguishes between a leader and a follower." 
-              <br>
-              ~Steve Jobs 
-              <br>
-              <br>
-              Join us for an engaging talk session at <b>REX 5.0</b>, organized by <b>IEEE RAS SBC RIT</b>.
-              <br>
-              <br>
+              "Innovation distinguishes between a leader and a follower."
+              <br />
+              ~Steve Jobs
+              <br />
+              <br />
+              Join us for an engaging talk session at <b>REX 5.0</b>, organized
+              by <b>IEEE RAS SBC RIT</b>.
+              <br />
+              <br />
               Topic:&emsp;&ensp;<b>Robotics in Assistive Technology</b>
-              <br>
+              <br />
               Speaker: <b>Vishnu P Kumar</b>
-              <br>
+              <br />
               &emsp;&emsp;&emsp;&emsp;Co Founder and CTO,
-              <br>
+              <br />
               &emsp;&emsp;&emsp;&emsp;Unibotix Innovations
-              <br>
+              <br />
               Venue:&emsp;<b>RIT Kottayam</b>
-              <br>
-              Date:&emsp;&ensp;<b>18, 19, 20 October 2024</b>
-              <br><br>
-              Explore how robotics is revolutionizing assistive technology and changing lives.
-              <br>
+              <br />
+              Date:&emsp;&ensp;<b>18, 19, 20 October 2024</b> <br /><br />
+              Explore how robotics is revolutionizing assistive technology and
+              changing lives.
+              <br />
               ✨ Be part of this inspiring conversation!
             </p>
           </div>
@@ -344,7 +352,6 @@
             >
           </div>
         </div>
-
       </div>
 
       <footer class="footer">
@@ -393,19 +400,37 @@
             Email:
             <a href="mailto:ieeerasrex@gmail.com">ieeerasrex@gmail.com</a>
 
-            <br><br>
+            <br /><br />
             <b>Built by:</b>
-            <br>
+            <br />
             REX Web Team:
-            <br>
-            <a href="http://www.linkedin.com/in/ellenrosejames" target="_blank" style="text-decoration: none;">Ellen Rose James</a>
-            <br>
-            <a href="https://www.linkedin.com/in/dhananjayr/" target="_blank" style="text-decoration: none;">Dhananjay R</a>
+            <br />
+            <a
+              href="http://www.linkedin.com/in/ellenrosejames"
+              target="_blank"
+              style="text-decoration: none"
+              >Ellen Rose James</a
+            >
+            <br />
+            <a
+              href="https://www.linkedin.com/in/dhananjayr/"
+              target="_blank"
+              style="text-decoration: none"
+              >Dhananjay R</a
+            >
           </p>
         </div>
 
         <div class="footer-map">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3934.19079391124!2d76.62031297484009!3d9.578815990506149!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b062d96b2fe8ed9%3A0xbade243e087b408!2sRAJIV%20GANDHI%20INSTITUTE%20OF%20TECHNOLOGY%2C%20KOTTAYAM!5e0!3m2!1sen!2sin!4v1728241993898!5m2!1sen!2sin" width="250" height="250" style="border:0; border-radius: 20px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3934.19079391124!2d76.62031297484009!3d9.578815990506149!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b062d96b2fe8ed9%3A0xbade243e087b408!2sRAJIV%20GANDHI%20INSTITUTE%20OF%20TECHNOLOGY%2C%20KOTTAYAM!5e0!3m2!1sen!2sin!4v1728241993898!5m2!1sen!2sin"
+            width="250"
+            height="250"
+            style="border: 0; border-radius: 20px"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
         </div>
       </footer>
     </div>
